# hexcap

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-BSD  README.md  Taskfile.yml
.agents/skills/hexcap/: SKILL.md
docs/rationale/: 0001_architecture.md  0002_theme_system.md  0003_process_filtering.md  0004_hex_dump_renderer.md  0005_ipv6_and_protocol_decode.md  0006_pcap_export_import.md  0007_flow_tracking.md  0008_interface_switching.md  0009_clipboard_bookmarks_navigation.md  0010_payload_search.md  0011_dns_resolution.md  0012_tcp_stream_and_tls.md  0013_mouse_columns_footer.md  0014_export_coloring_overlays_diff.md  0015_batch4_features.md
scripts/: version.sh
src/: agent.rs  app.rs  capture.rs  clipboard.rs  config.rs  dns.rs  event_loop.rs  expert.rs  export.rs  geoip.rs  headless.rs  hex.rs  keys.rs  main.rs  packet.rs  process.rs  tcp_analysis.rs  theme.rs
src/ui/: agent_pane.rs  detail.rs  diff.rs  expert_overlay.rs  flow_graph.rs  flows.rs  footer.rs  header.rs  help.rs  helpers.rs  list.rs  mod.rs  picker.rs  proto_hierarchy.rs  stats.rs  stats_summary.rs
