[package]
name = "hexcap"
version = "0.2.2"
edition = "2024"
rust-version = "1.95.0"
description = "TUI packet capture tool with libpcap and hexyl-style hex dump"
license = "MIT OR BSD-3-Clause"
authors = ["Pastel Sketchbook <252934749+pastelsketchbook@users.noreply.github.com>"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
libc = "0.2.185"
pcap = "2.4.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
